--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "AbsentiaSans";
+  src: url(/fonts/AbsentiaSansBold.ttf) format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AbsentiaSans";
+  src: url(/fonts/AbsentiaSansMedium.ttf) format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AbsentiaSans";
+  src: url(/fonts/AbsentiaSansRegular.ttf) format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AbsentiaSans";
+  src: url(/fonts/AbsentiaSansLight.ttf) format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "ChronicleText";
+  src: url(/fonts/ChronicleText.otf) format("opentype");
+  font-style: normal;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "ChronicleText", "AbsentiaSans", sans-serif;
+  font-weight: 500;
+}
+
+body {
+  font-size: 16px;
+}
+h2,
+h1,
+h3,
+h4 {
+  font-family: "Absentiasans";
+}
