--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,30 @@
 @font-face {
     font-family: "AbsentiaSans";
-    src: url(../public/fonts/AbsentiaSansBold.ttf) format("truetype");
+    src: url(/fonts/AbsentiaSansBold.ttf) format("truetype");
     font-weight: bold;
     font-style: normal;
   }
   @font-face {
     font-family: "AbsentiaSans";
-    src: url(../public/fonts/AbsentiaSansMedium.ttf) format("truetype");
+    src: url(/fonts/AbsentiaSansMedium.ttf) format("truetype");
     font-weight: 500;
     font-style: normal;
   }
   @font-face {
     font-family: "AbsentiaSans";
-    src: url(../public/fonts/AbsentiaSansRegular.ttf) format("truetype");
+    src: url(/fonts/AbsentiaSansRegular.ttf) format("truetype");
     font-weight: 400;
     font-style: normal;
   }
   @font-face {
     font-family: "AbsentiaSans";
-    src: url(../public/fonts/AbsentiaSansLight.ttf) format("truetype");
+    src: url(/fonts/AbsentiaSansLight.ttf) format("truetype");
     font-weight: 300;
     font-style: normal;
   }
   @font-face {
     font-family: "ChronicleText";
-    src: url(../public/fonts/ChronicleText.otf) format("opentype");
+    src: url(/fonts/ChronicleText.otf) format("opentype");
     font-style: normal;
   }
   
