--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,31 @@
 @font-face {
-  font-family: "AbsentiaSans";
-  src: url(/fonts/AbsentiaSansBold.ttf) format("truetype");
+  font-family: 'AbsentiaSans';
+  src: url(/fonts/AbsentiaSansBold.ttf) format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
-
-  font-family: "AbsentiaSans";
-  src: url(/fonts/AbsentiaSansMedium.ttf) format("truetype");
+  font-family: 'AbsentiaSans';
+  src: url(/fonts/AbsentiaSansMedium.ttf) format('truetype');
 
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-
-  font-family: "AbsentiaSans";
-  src: url(/fonts/AbsentiaSansRegular.ttf) format("truetype");
+  font-family: 'AbsentiaSans';
+  src: url(/fonts/AbsentiaSansRegular.ttf) format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: "AbsentiaSans";
-  src: url(/fonts/AbsentiaSansLight.ttf) format("truetype");
+  font-family: 'AbsentiaSans';
+  src: url(/fonts/AbsentiaSansLight.ttf) format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
-  font-family: "ChronicleText";
-  src: url(/fonts/ChronicleText.otf) format("opentype");
+  font-family: 'ChronicleText';
+  src: url(/fonts/ChronicleText.otf) format('opentype');
   font-style: normal;
 }
 
@@ -36,7 +34,8 @@
   padding: 0;
   box-sizing: border-box;
 
-  font-family: "ChronicleText", "AbsentiaSans", sans-serif;
+  font-family: 'ChronicleText', 'AbsentiaSans', sans-serif;
+}
 
 body {
   font-size: 16px;
