--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   font-style: normal;
 }
 @font-face {
-
   font-family: "AbsentiaSans";
   src: url(/fonts/AbsentiaSansMedium.ttf) format("truetype");
 
@@ -13,7 +12,6 @@
   font-style: normal;
 }
 @font-face {
-
   font-family: "AbsentiaSans";
   src: url(/fonts/AbsentiaSansRegular.ttf) format("truetype");
   font-weight: 400;
@@ -37,6 +35,7 @@
   box-sizing: border-box;
 
   font-family: "ChronicleText", "AbsentiaSans", sans-serif;
+}
 
 body {
   font-size: 16px;
@@ -45,7 +44,7 @@ h2,
 h1,
 h3,
 h4 {
-  font-family: 'Absentiasans';
+  font-family: "Absentiasans";
 }
 
 .responsive {
@@ -124,6 +123,15 @@ h4 {
 
 .filter-inherit {
   filter: inherit;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes slideh {
