--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'AbsentiaSans';
-  src: url(/fonts/AbsentiaSansBold.ttf) format('truetype');
+  font-family: "AbsentiaSans";
+  src: url(/fonts/AbsentiaSansBold.ttf) format("truetype");
   font-weight: bold;
   font-style: normal;
 }
@@ -17,14 +17,14 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'AbsentiaSans';
-  src: url(/fonts/AbsentiaSansLight.ttf) format('truetype');
+  font-family: "AbsentiaSans";
+  src: url(/fonts/AbsentiaSansLight.ttf) format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
-  font-family: 'ChronicleText';
-  src: url(/fonts/ChronicleText.otf) format('opentype');
+  font-family: "ChronicleText";
+  src: url(/fonts/ChronicleText.otf) format("opentype");
   font-style: normal;
 }
 
@@ -85,6 +85,10 @@ h4 {
 
 .scrollbar-hide::-webkit-scrollbar {
   @apply hidden;
+}
+
+.snap {
+  scroll-snap-type: inline mandatory;
 }
 
 .animation-pause:hover {
